<resources>
    <string name="app_name">Basketball</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="final_result">Final Result</string>
</resources>